--- a/RTBareBones/AndroidGradle/app/build.gradle
+++ b/RTBareBones/AndroidGradle/app/build.gradle
@@ -38,14 +38,14 @@ android {
             keyPassword = props['RTkeyPassword']
         }
     }
-    compileSdk 32
+    compileSdk 35
 
     defaultConfig {
         applicationId = props['RTappID']
 
         println 'Setting package name to '+applicationId
         minSdk 21
-        targetSdk 32
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -74,7 +74,7 @@ android {
     externalNativeBuild {
         cmake {
             path file('src/main/cpp/CMakeLists.txt')
-            version '3.18.1'
+
         }
 
     }
@@ -82,6 +82,8 @@ android {
         viewBinding true
     }
     namespace 'com.rtsoft.RTAndroidApp'
+    buildToolsVersion '35.0.1'
+    ndkVersion '25.1.8937393'
 }
 
 dependencies {
