Update Gradle configuration and batch scripts for improved setup and compatibility (RTSimpleApp)

--- a/RTSimpleApp/AndroidGradle/app/build.gradle
+++ b/RTSimpleApp/AndroidGradle/app/build.gradle
@@ -41,14 +41,14 @@ android {
         }
     }
 
-	compileSdk 32
+	compileSdk 35
 
     defaultConfig {
         applicationId = props['RTappID']
 
         println 'Setting package name to '+applicationId
         minSdk 21
-        targetSdk 32
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -84,13 +84,16 @@ android {
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.rtsoft.RTAndroidApp'
+    buildToolsVersion '35.0.1'
+    ndkVersion '27.0.12077973'
 }
 
 dependencies {
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation files('libs\\fmod.jar')
+    implementation files('libs/fmod.jar')
     //testImplementation 'junit:junit:4.13.2'
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
