--- a/RTSimpleApp/AndroidGradle/gradle/wrapper/gradle-wrapper.properties
+++ b/RTSimpleApp/AndroidGradle/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,8 @@
-#Thu Mar 03 17:00:48 JST 2022
+#Mon Feb 10 22:03:28 JST 2025
 distributionBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-bin.zip
 distributionPath=wrapper/dists
-zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.10.2-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
