- Enhance Android build scripts and logging; add status bar hiding functionality - Fixed issue with device rotation and latest Android gradle builds

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ RTLooneyLadders/windows/save.dat
 RTMahjong
 RTLibretroTest_dynamic_link_version
 TempBackup
+shared/android/optional_src/libs/libcurl-android
